exports[`App hides/shows the buttons based on the recorder' state  1`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/714ceded-2c90-43e5-99b0-01bb1badf517" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-pause"
      disabled="" />
    <button
      class="button-large fa fa-video-camera" />
    <button
      class="button-medium fa fa-download"
      disabled="" />
  </div>
</div>
`;

exports[`App hides/shows the buttons based on the recorder' state  2`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/714ceded-2c90-43e5-99b0-01bb1badf517" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-pause" />
    <button
      class="button-large fa fa-stop" />
    <button
      class="button-medium fa fa-download"
      disabled="" />
  </div>
</div>
`;

exports[`App hides/shows the buttons based on the recorder' state  3`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/714ceded-2c90-43e5-99b0-01bb1badf517" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-play" />
    <button
      class="button-large fa fa-stop" />
    <button
      class="button-medium fa fa-download"
      disabled="" />
  </div>
</div>
`;

exports[`App hides/shows the buttons based on the recorder' state  4`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/714ceded-2c90-43e5-99b0-01bb1badf517" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-pause" />
    <button
      class="button-large fa fa-stop" />
    <button
      class="button-medium fa fa-download"
      disabled="" />
  </div>
</div>
`;

exports[`App hides/shows the buttons based on the recorder' state  5`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/714ceded-2c90-43e5-99b0-01bb1badf517" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-pause"
      disabled="" />
    <button
      class="button-large fa fa-video-camera" />
    <button
      class="button-medium fa fa-download" />
  </div>
</div>
`;

exports[`App renders empty when media access is denied 1`] = `undefined`;

exports[`App renders empty while loading 1`] = `undefined`;

exports[`App renders the preview URL from the recorder data 1`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/e9b601bf-a151-4ab8-970d-b15d32622ab4" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-pause"
      disabled="" />
    <button
      class="button-large fa fa-video-camera" />
    <button
      class="button-medium fa fa-download" />
  </div>
</div>
`;

exports[`App renders the video URL from the stream 1`] = `
<div>
  <video
    autoplay=""
    class="fullscreen"
    loop=""
    src="http://localhost/e75dbc24-dd2c-4157-bf0e-f0a7773e98c8" />
  <div
    class="buttons-container">
    <button
      class="button-medium fa fa-pause"
      disabled="" />
    <button
      class="button-large fa fa-video-camera" />
    <button
      class="button-medium fa fa-download"
      disabled="" />
  </div>
</div>
`;
